Removed the utility for getting bytes from int, added comprehensive compression type magic bytes test
Signed-off-by: Ivan St. Ivanov <ivan.st.ivanov@gmail.com>